spotless apply use custom repeat