@@ -1,12 +1,16 @@
 package city.windmill.cropchance.command;
 
-import com.mojang.realmsclient.gui.ChatFormatting;
-import cpw.mods.fml.common.FMLCommonHandler;
-import ic2.api.crops.CropCard;
-import ic2.core.crop.IC2Crops;
+import java.util.stream.Collectors;
+
 import net.minecraft.client.resources.I18n;
 import net.minecraft.command.ICommandSender;
 import net.minecraft.util.MathHelper;
+
+import com.mojang.realmsclient.gui.ChatFormatting;
+
+import cpw.mods.fml.common.FMLCommonHandler;
+import ic2.api.crops.CropCard;
+import ic2.core.crop.IC2Crops;
 
 public class CropCardCommand extends SubCommand {
 
@@ -24,17 +28,22 @@ public class CropCardCommand extends SubCommand {
             try {
                 page = Integer.parseInt(args[0]);
             } catch (NumberFormatException e) {
-                c.text(ChatFormatting.RESET, "/crop cropcard <page>").commit();
+                c.text(ChatFormatting.RESET, "/crop cropcard <page>")
+                    .commit();
                 return;
             }
         }
 
-        int size = IC2Crops.instance.getCrops().size();
+        int size = IC2Crops.instance.getCrops()
+            .size();
         page = MathHelper.clamp_int(page, 1, size);
 
         c.beginPage("CropCard", "/crop cropcard %d", page, page - 1, page + 1, size);
 
-        CropCard crop = IC2Crops.instance.getCrops().stream().toList().get(page - 1);
+        CropCard crop = IC2Crops.instance.getCrops()
+            .stream()
+            .collect(Collectors.toList())
+            .get(page - 1);
         formatCropCard(crop, c);
 
         c.endPage("/crop cropcard %d", page, page - 1, page + 1, size);
@@ -50,8 +59,11 @@ public class CropCardCommand extends SubCommand {
 
         // Mod Name
         c.attrSameLine("Owner", crop.owner());
-        c.attr("Name",
-            FMLCommonHandler.instance().findContainerFor(crop.owner()).getName());
+        c.attr(
+            "Name",
+            FMLCommonHandler.instance()
+                .findContainerFor(crop.owner())
+                .getName());
 
         // Attributes
         String attrs = String.join(", ", crop.attributes());
